--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -114,6 +114,9 @@ jobs:
 
   merge-main-images:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     needs: [build-main-image]
     steps:
       # GitHub Packages requires the entire repository name to be in lowercase
